--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap-sass": "^3.3.7",
     "animate.css": "^3.5.2",
     "icomoon-bower": "icomoon#^0.1.2",
-    "magnific-popup": "^1.1.0"
+    "magnific-popup": "^1.1.0",
+    "owl.carousel": "^2.2.1"
   }
 }
