--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "animate.css": "^3.5.2",
     "icomoon-bower": "icomoon#^0.1.2",
     "magnific-popup": "^1.1.0",
-    "owl.carousel": "^2.2.1"
+    "owl.carousel": "^2.2.1",
+    "modernizr": "^3.5.0",
+    "jquery.easing": "^1.3.1"
   }
 }
